# EPLC_AI_Assistant

./: .env.example  .gitignore  README.md  ibm.py  pyproject.toml  requirements.txt
Coding/: README.md
Data/: README.md
Data/Design Phase Embedding/: CDC_UP_Capacity_Planning_embedding (2).json  CDC_UP_Contingency_Planning_Final_Embedding.json  CDC_UP_Contingency_Planning_embedding.json  CDC_UP_Interface_Control_embedding (1).json  EPLC_Data_Conversion_Plan_embedding.json  EPLC_Implementation_Plan_embedding.json
Data/Development Phase Templates/Development Phase Cleaned/: Development Phase DB.py
Data/EPLC Framework/EPLC Cleaned Data/: Design_Phase_3.5_MERGED_FINAL_FIXED_1765597020.json  Design_Phase_FULL.json  Development_Phase_3.6_MERGED_FINAL_1765598996.json  Development_Phase_FULL.json  Implementation_Phase_3.8.json  Implementation_Phase_PART1.json  Implementation_Phase_PART2.json  Requirements_Analysis_Phase_3.4.json  Requirements_Analysis_Phase_FINAL.json
Data/EPLC Framework/EPLC embedding data/: Design_Phase_embeddings.json  Development_Phase_embeddings.json  Implementation_Phase_P1_embeddings.json  (+2 more)
Data/EPLC New Embedding/: Implementation_phase_embeddings_final.json  Requirement_phase_embeddings_final.json  design_phase_embeddings_final.json  development_phase_embeddings_final.json
Data/HHS EPLC Website/: HHS EPLC embedded.py  HHS_EPLC_embeddings.json
frontend/: ibm.py
src/eplc_assistant/: __init__.py  app.py  config.py  llm.py  models.py  rag.py  runtime.py
tests/: test_config.py  test_rag.py  test_runtime.py  test_services.py
(+8 files in other folders)
